log/Compile_error.txt
main.c: In function 'csv_name':
main.c:257:21: error: passing argument 2 of 'strncpy' makes pointer from integer without a cast [-Wint-conversion]
  257 |     strncpy(r_name, sizeof(r_name) - 1, base_name);
      |                     ^~~~~~~~~~~~~~~~~~
      |                     |
      |                     long long unsigned int
In file included from C:/msys64/ucrt64/include/io.h:10,
                 from C:/msys64/ucrt64/include/unistd.h:10,
                 from main.c:4:
C:/msys64/ucrt64/include/string.h:96:69: note: expected 'const char * restrict' but argument is of type 'long long unsigned int'
   96 |   char *strncpy(char * __restrict__ _Dest,const char * __restrict__ _Source,size_t _Count) __MINGW_ATTRIB_DEPRECATED_SEC_WARN;
      |                                           ~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~
main.c:257:41: error: passing argument 3 of 'strncpy' makes integer from pointer without a cast [-Wint-conversion]
  257 |     strncpy(r_name, sizeof(r_name) - 1, base_name);
      |                                         ^~~~~~~~~
      |                                         |
      |                                         const char *
C:/msys64/ucrt64/include/string.h:96:84: note: expected 'size_t' {aka 'long long unsigned int'} but argument is of type 'const char *'
   96 |   char *strncpy(char * __restrict__ _Dest,const char * __restrict__ _Source,size_t _Count) __MINGW_ATTRIB_DEPRECATED_SEC_WARN;
      |                                                                             ~~~~~~~^~~~~~
